加入文章点击次数

--- a/languages/en.yml
+++ b/languages/en.yml
@@ -22,6 +22,7 @@ article:
     comments: 'Comments'
     share: 'Share'
     catalogue: 'Catalogue'
+  hits: 'Hits'
 profile:
     follow: 'FOLLOW'
     post: 'post'
